syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sep3.grpc.proto";

service RecipeFinder{
  rpc GetRecipes (RecipeRequest) returns (RecipeResponse) {}
}
message RecipeRequest
{
  string ingredient = 1;
}
message RecipeResponse
{
   string recipes = 1;
}